--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   <artifactId>javax.servlet.api</artifactId>
   <packaging>bundle</packaging>
   
-  <version>2.5.Final</version>
+  <version>2.6-SNAPSHOT</version>
 
   <!-- Source -->
   <scm>
